--- a/src/main/resources/mail/password-recovery.html
+++ b/src/main/resources/mail/password-recovery.html
@@ -4,36 +4,83 @@
     <meta charset="UTF-8">
     <title>Восстановление пароля</title>
     <style>
-        p {
+
+        table {
             font-family: sans-serif;
-            color: black;
+            color: #FFFFFF;
+        }
+
+        .btn {
+            background: #6162FF;
+            border: 1px solid #6162FF;
+            color: #FFFFFF;
+            border-radius: 10px;
+            padding: 10px 30px;
+            text-transform: uppercase;
+            text-decoration: none;
+            font-size: 15px;
+            text-align: center;
+        }
+
+        .btn:hover {
+            background: #867CFD;
+            border: 1px solid #867CFD;
+            cursor: pointer;
         }
     </style>
 </head>
-<body>
+<body style="margin: 0; padding: 0;">
 
-<div>
-    <p>Уважаемый пользователь!</p>
+<table border="0" cellpadding="0" cellspacing="0" width="100%" style="background: #E7E7E7; padding: 20px;">
+    <tr>
+        <td>
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" bgcolor="#111111"
+                   style="border-collapse: collapse; border-radius: 30px;">
+                <tr>
+                    <td align="center" style="padding-top: 25px">
+                        <img src="cid:logo.png"
+                             alt="Логотип mail/images/logo_title.svg"
+                             style="width: 60%;">
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding: 0 20px">
+                        <p>Здравствуйте, уважаемый пользователь!</p>
 
-    <p>Вы воспользовались процедурой восстановление пароля на сайте кафедры
-        <a href="http://localhost:8080/">ИВТ</a>
-    </p>
+                        <p>
+                            Вы воспользовались процедурой восстановление пароля на сайте кафедры
+                            <a class="link" href="http://localhost:8081/">ИВТ</a>
+                        </p>
 
-    <p>Для получения нового пароля перейдите по указанной ссылке:</p>
+                        <p>Для смены пароля нажмите на кнопку ниже</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" style="padding: 10px 20px">
+                        <a class="btn" th:href="@{http://localhost:8081/recover(token=${token})}">
+                            восстановить пароль
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding: 0 20px 10px 20px">
+                        <p>Смена пароля действует в течение часа с момента отправки данного письма</p>
 
-    <a th:href="@{http://localhost:8080/updatapass/{token} (token=${token})}"
-       th:text="'http://localhost:8080/updatapass/' + ${token}"></a>
+                        <p>
+                            Если вы не обращались к процедуре восстановление пароля, просто проигнорируйте данное
+                            письмо. Ваш пароль не будет изменен.
+                        </p>
 
-    <p>Ссылка действует в течение часа с момента отправки данного письма</p>
-
-    <p>Если вы не обращались к процедуре восстановление пароля, просто проигнорируйте данной письмо.
-        Ваш пароль не будет изменен</p>
-
-    <p>
-        С уважением,<br>
-        Администрация сайта
-    </p>
-</div>
+                        <p>
+                            С уважением,<br>
+                            Администрация сайта
+                        </p>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
 
 </body>
 </html>
