--- a/src/main/resources/mail/change-email.html
+++ b/src/main/resources/mail/change-email.html
@@ -3,28 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <title>Изменение электронной почты</title>
+    <style>
+
+        table {
+            font-family: sans-serif;
+            color: #FFFFFF;
+        }
+
+        .btn {
+            background: #6162FF;
+            border: 1px solid #6162FF;
+            color: #FFFFFF;
+            border-radius: 10px;
+            padding: 10px 30px;
+            text-transform: uppercase;
+            text-decoration: none;
+            font-size: 15px;
+            text-align: center;
+        }
+
+        .btn:hover {
+            background: #867CFD;
+            border: 1px solid #867CFD;
+            cursor: pointer;
+        }
+    </style>
 </head>
-<body>
+<body style="margin: 0; padding: 0;">
 
-<div>
-    <p>Уважаемый пользователь!</p>
+<table border="0" cellpadding="0" cellspacing="0" width="100%" style="background: #E7E7E7; padding: 20px;">
+    <tr>
+        <td>
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" bgcolor="#111111"
+                   style="border-collapse: collapse; border-radius: 30px;">
+                <tr>
+                    <td align="center" style="padding-top: 25px">
+                        <img src="cid:logo.png"
+                             alt="Логотип mail/images/logo_title.svg"
+                             style="width: 60%;">
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding: 0 20px">
+                        <p>Здравствуйте, уважаемый пользователь!</p>
 
-    <p>Вы воспользовались процедурой смены адреса электронной почты
-        <a href="http://localhost:8080/">ИВТ</a>
-    </p>
+                        <p>
+                            Вы воспользовались процедурой смены адреса электронной почты на сайте кафедры
+                            <a class="link" href="http://localhost:8081/">ИВТ</a>
+                        </p>
 
-    <p>Для активации новой почты перейдите по указанной ссылке:</p>
+                        <p>Для активации новой почты нажмите на кнопку ниже</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" style="padding: 10px 20px">
+                        <a class="btn" th:href="@{http://localhost:8081/activatemail(token=${token})}">
+                            активировать новую почту
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding: 0 20px 10px 20px">
 
-    <a th:href="@{http://localhost:8080/activatemail/{token} (token=${token})}"
-       th:text="'http://localhost:8080/activatemail/' + ${token}"></a>
+                        <p>
+                            Ссылка действует в течение часа с момента отправки данного письма.
+                        </p>
 
-    <p>Ссылка действует в течение часа с момента отправки данного письма</p>
-
-    <p>
-        С уважением,<br>
-        Администрация сайта
-    </p>
-</div>
+                        <p>
+                            С уважением,<br>
+                            Администрация сайта
+                        </p>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
 
 </body>
 </html>
