--- a/src/main/resources/mail/password-recovery.html
+++ b/src/main/resources/mail/password-recovery.html
@@ -46,7 +46,7 @@
                 <tr>
                     <td style="padding: 0 20px">
                         <p>Здравствуйте, уважаемый пользователь!</p>
-
+                        <!--TODO заменить-->
                         <p>
                             Вы воспользовались процедурой восстановление пароля на сайте кафедры
                             <a class="link" href="http://localhost:8081/">ИВТ</a>
